--- a/jakarta.batch.arquillian.exec-parent/pom.xml
+++ b/jakarta.batch.arquillian.exec-parent/pom.xml
@@ -22,7 +22,7 @@ Copyright 2012, 2024 International Business Machines Corp. and others
     <parent>
         <groupId>jakarta.batch</groupId>
         <artifactId>tck-parent</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jakarta.batch.arquillian.exec-parent</artifactId>
@@ -34,18 +34,18 @@ Copyright 2012, 2024 International Business Machines Corp. and others
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-container-test-spi</artifactId>
-                <version>1.7.0.Alpha9</version>
+                <version>1.9.1.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.junit5</groupId>
                 <artifactId>arquillian-junit5-core</artifactId>
-                <version>1.7.0.Alpha9</version>
+                <version>1.9.1.Final</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.junit5</groupId>
                 <artifactId>arquillian-junit5-container</artifactId>
-                <version>1.7.0.Alpha9</version>
+                <version>1.9.1.Final</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
