--- a/jakarta.batch.arquillian.extension/pom.xml
+++ b/jakarta.batch.arquillian.extension/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>jakarta.batch</groupId>
         <artifactId>tck-parent</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jakarta.batch.arquillian.extension</artifactId>
@@ -34,7 +34,7 @@
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
-                <version>1.7.0.Alpha9</version>
+                <version>1.9.1.Final</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -54,6 +54,7 @@
             <groupId>org.jboss.shrinkwrap.resolver</groupId>
             <artifactId>shrinkwrap-resolver-depchain</artifactId>
             <type>pom</type>
+            <version>3.3.0</version>
         </dependency>
     </dependencies>
 
